Gestion de reservas (listaar, agregar y eliminar)

--- a/GestionRestaurants/Views/Shared/_Layout.cshtml
+++ b/GestionRestaurants/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Reservas" asp-action="Index">Reservas</a></li>
                     <li><a asp-area="" asp-controller="Restaurants" asp-action="Index">Restaurants</a></li>
                     <li><a asp-area="" asp-controller="Horarios" asp-action="Index">Horarios de reserva</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
