--- a/GestionRestaurants/Views/Shared/_Layout.cshtml
+++ b/GestionRestaurants/Views/Shared/_Layout.cshtml
@@ -26,11 +26,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">GestionRestaurants</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Gestion de Restaurants</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Reservas" asp-action="Index">Reservas</a></li>
                     <li><a asp-area="" asp-controller="Restaurants" asp-action="Index">Restaurants</a></li>
                     <li><a asp-area="" asp-controller="Horarios" asp-action="Index">Horarios de reserva</a></li>
@@ -46,7 +45,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2019 - GestionRestaurants</p>
+            <p>&copy; 2019 - Gestion de Restaurants</p>
         </footer>
     </div>
 
