--- a/GestionRestaurants/Views/Shared/_Layout.cshtml
+++ b/GestionRestaurants/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - GestionRestaurants</title>
+    <title>@ViewData["Title"] - Gestion de Restaurants</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -33,6 +33,7 @@
                     <li><a asp-area="" asp-controller="Reservas" asp-action="Index">Reservas</a></li>
                     <li><a asp-area="" asp-controller="Restaurants" asp-action="Index">Restaurants</a></li>
                     <li><a asp-area="" asp-controller="Horarios" asp-action="Index">Horarios de reserva</a></li>
+                    <li><a asp-area="" asp-controller="Indisponibilidades" asp-action="Index">Indisponibilidades</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
