--- a/GestionRestaurants/Views/Shared/_Layout.cshtml
+++ b/GestionRestaurants/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                     <li><a asp-area="" asp-controller="Restaurants" asp-action="Index">Restaurants</a></li>
                     <li><a asp-area="" asp-controller="Horarios" asp-action="Index">Horarios de reserva</a></li>
                     <li><a asp-area="" asp-controller="Indisponibilidades" asp-action="Index">Indisponibilidades</a></li>
+                    <li><a asp-area="" asp-controller="Restricciones" asp-action="Index">Restricciones</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
