--- a/GestionRestaurants/Views/Reservas/Index.cshtml
+++ b/GestionRestaurants/Views/Reservas/Index.cshtml
@@ -6,9 +6,13 @@
 
 <h2>Listado de reservas</h2>
 
-<p>
-    <a class="btn btn-success" asp-action="Nuevo">Nueva</a>
-</p>
+@if (User.Identity.IsAuthenticated)
+{
+    <p>
+        <a class="btn btn-success" asp-action="Nuevo">Nueva</a>
+    </p>
+}
+<hr />
 <div class="row">
     @foreach (var grupo in Model.GroupBy(m => m.Fecha))
     {
@@ -29,7 +33,10 @@
                                 {
                                     <p class="list-group-item-text">
                                         Habitacion @reserva.Habitacion, Pax : @reserva.Pax
-                                        <a asp-action="Eliminar" asp-route-id="@reserva.ReservaId"><i class="glyphicon glyphicon-trash"></i></a>
+                                        @if (User.Identity.IsAuthenticated)
+                                        {
+                                            <a asp-action="Eliminar" asp-route-id="@reserva.ReservaId"><i class="glyphicon glyphicon-trash"></i></a>
+                                        }
                                     </p>
                                 }
                             }
