Gestion de Usuarios y cambios de autenticacion

--- a/GestionRestaurants/Views/Shared/_Layout.cshtml
+++ b/GestionRestaurants/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                     <li><a asp-area="" asp-controller="Horarios" asp-action="Index">Horarios de reserva</a></li>
                     <li><a asp-area="" asp-controller="Indisponibilidades" asp-action="Index">Indisponibilidades</a></li>
                     <li><a asp-area="" asp-controller="Restricciones" asp-action="Index">Restricciones</a></li>
+                    <li><a asp-area="" asp-controller="Usuarios" asp-action="Index">Usuarios</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
