usando input time

--- a/GestionRestaurants/Views/Horarios/Editar.cshtml
+++ b/GestionRestaurants/Views/Horarios/Editar.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Hora" class="control-label"></label>
-                <input asp-for="Hora" class="form-control" />
+                <input asp-for="Hora" type="time" class="form-control" />
                 <span asp-validation-for="Hora" class="text-danger"></span>
             </div>
             <div class="form-group">
