--- a/GestionRestaurants/Views/Indisponibilidades/Eliminar.cshtml
+++ b/GestionRestaurants/Views/Indisponibilidades/Eliminar.cshtml
@@ -28,6 +28,12 @@
         <dd>
             @Html.DisplayFor(model => model.Restaurant.Nombre)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Observaciones)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Observaciones)
+        </dd>
     </dl>
     
     <form asp-action="Eliminar">
