--- a/GestionRestaurants/Views/Indisponibilidades/Nuevo.cshtml
+++ b/GestionRestaurants/Views/Indisponibilidades/Nuevo.cshtml
@@ -27,6 +27,11 @@
                 <span asp-validation-for="RestaurantId" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Observaciones" class="control-label"></label>
+                <textarea class="form-control" asp-for="Observaciones" required></textarea>
+                <span asp-validation-for="Observaciones" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Crear" class="btn btn-success" />
                 <a class="btn btn-default" asp-action="Index">Listado</a>
             </div>
